loading lazy added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <p class="header__paragraph">Selectores, Box Model, Pseudoclases, Flexbox y más...</p>
             </div>
             <figure class="header__img">
-                <img src="assets/dev.svg" alt="" class="header__picture">
+                <img src="assets/dev.svg" alt="" class="header__picture" loading="lazy">
             </figure>
         </section>
     </header>
@@ -37,7 +37,7 @@
                 <button class="about__btn">Unete al curso</button>
             </div>
             <figure class="about__img">
-                <img src="assets/people.svg" alt="" class="about__picture">
+                <img src="assets/people.svg" alt="" class="about__picture" loading="lazy">
             </figure>
         </section>
         <section class="ourWork">
@@ -45,7 +45,7 @@
                 <h2 class="ourWork__title">Nuestros planes de trabajo</h2>
                 <div class="cardsContainer">
                     <div class="card">
-                        <img src="assets/card1.jpg" alt="" class="card__picture">
+                        <img src="assets/card1.jpg" alt="" class="card__picture" loading="lazy">
                         <div class="card__body">
                             <h3 class="card__title">Únete a nuestro plan</h3>
                             <p class="card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus tempore
@@ -56,7 +56,7 @@
                         <button class="card__btn">Entra ahora</button>
                     </div>
                     <div class="card">
-                        <img src="assets/card1.jpg" alt="" class="card__picture">
+                        <img src="assets/card1.jpg" alt="" class="card__picture" loading="lazy">
                         <div class="card__body">
                             <h3 class="card__title">Únete a nuestro plan</h3>
                             <p class="card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus tempore
@@ -67,7 +67,7 @@
                         <button class="card__btn">Entra ahora</button>
                     </div>
                     <div class="card">
-                        <img src="assets/card1.jpg" alt="" class="card__picture">
+                        <img src="assets/card1.jpg" alt="" class="card__picture" loading="lazy">
                         <div class="card__body">
                             <h3 class="card__title">Únete a nuestro plan</h3>
                             <p class="card__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus tempore
@@ -89,12 +89,12 @@
             <div class="container">
                   <h2 class="portfolio__title">Nuestro trabajo</h2>
                   <div class="portfolio__grid">
-                     <img src="assets/img1.jpg" alt="" class="portfolio__picture">
-                     <img src="assets/img2.jpg" alt="" class="portfolio__picture">
-                     <img src="assets/img3.jpg" alt="" class="portfolio__picture">
-                     <img src="assets/img4.jpg" alt="" class="portfolio__picture">
-                     <img src="assets/img5.jpg" alt="" class="portfolio__picture">
-                     <img src="assets/img6.jpg" alt="" class="portfolio__picture">
+                     <img src="assets/img1.jpg" alt="" class="portfolio__picture" loading="lazy">
+                     <img src="assets/img2.jpg" alt="" class="portfolio__picture" loading="lazy">
+                     <img src="assets/img3.jpg" alt="" class="portfolio__picture" loading="lazy">
+                     <img src="assets/img4.jpg" alt="" class="portfolio__picture" loading="lazy">
+                     <img src="assets/img5.jpg" alt="" class="portfolio__picture" loading="lazy">
+                     <img src="assets/img6.jpg" alt="" class="portfolio__picture" loading="lazy">
                   </div>
             </div>
         </section>
@@ -123,10 +123,10 @@
                       <li><a href="" class="footer__nav-item">Sobre nosotros</a></li>
                       <li><a href="" class="footer__nav-item">Trabajos</a></li>
                     </div>
-                    <p class="footer__paragraph">Derechos reservados © Jordan Alexander</p>
+                    <p class="footer__paragraph">Derechos reservados © Anthony Volquez</p>
                 </div>
                 <div class="footer__img">
-                  <img src="assets/mail.svg" alt="" class="footer__picture">
+                  <img src="assets/mail.svg" alt="" class="footer__picture" loading="lazy">
                 </div>
             </div>
         </footer>
